# ComfyUI-OllamaGemini

./: .cursorignore  .gitattributes  .gitignore  .image_loader_state.json  .tracking  =1.50.0  BEN2_RMBGx.py  BRIA_RMBG.py  BRIA_RMBGx.py  ComfyUI_GeminiOllama_Extension_README.md  FLUXResolutions.py  GeminiImageGenerationNode.py  GeminiOllamaNode.py  GeminiSmartPromptGenerator.py  LICENSE  MathExpressionNode.py  ObjectDetectNode.py  README.md  SmartPromptGenerator.py  VeoVideoGenerationNode.py  __init__.py  clipseg.py  clipsegx.py  config.json  config.json.example  generate_otter_image.py  list_models.py  prompt_styler.py  prompt_stylerx.py  pyproject.toml  requirements.txt  sizes.json  svgnode.py  svgnodex.py
data/Aesthetic/: Aesthetic.json
data/Anime/: Anime.json
data/Color_Grading/: Color_Grading.json
data/Fantasy/: Fantasy.json
data/architect/: architect.json
data/architecture-style/: architecture-style.json
data/body_type/: body_type.json
data/camera/: camera_styles.json  sdxl_camera_styles.json
data/camera_angles/: camera_angles.json
data/cinematic_direction/: cinematic_direction.json
data/clothing_state/: clothing_state.json
data/clothing_style/: clothing_style.json
data/color_theory/: color_theory.json
data/composition/: Composition_Styles.json
data/depth/: depth.json
data/digital_artform/: digital_artform.json
data/feelings/: feelings.json
data/filter/: Filter.json
data/general-arts/: general-arts.json
data/hair-style/: hair-style.json
data/lens_optics/: lens_optics.json
data/lighting/: Lighting.json
data/mood/: Mood.json
data/movies/: movies_styles.json
data/photographers/: photographers.json
data/poses/: poses.json
data/reactions/: reactions.json
data/science/: science.json
data/vehicle/: vehicle.json
examples/: README.md
js/: gemini_crop_editor.js  gemini_node.js
web/js/: veo_widgets.js
