[project]
name = "comfyui-ollamagemini"
description = ""
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["google-generativeai", "vtracer", "requests", "openai", "anthropic"]

[project.urls]
Repository = "https://github.com/al-swaiti/ComfyUI-OllamaGemini"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "abdallaalsw80"
DisplayName = "ComfyUI-OllamaGemini"
Icon = ""
